[package]
name = "Curve25519"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10.2"
ctr = "0.9.1"
aes = "0.8.1"
log = "0.4.14"
ciborium-io = "0.2.0"
rand_core = "0.6.3"
x25519-dalek = { version = "2.0.0-pre.1", optional = true }
curve25519-dalek = { version = "4.0.0-pre.2", optional = true }
hex = "0.4.3"
ed25519-dalek = "1.0.1"

[dev-dependencies]
hex = "0.4.3"
x25519-dalek = "= 2.0.0-pre.1"
curve25519-dalek = "= 4.0.0-pre.2"
rand = "0.8.5"
base64 = "0.13.0"
ciborium-io = { version = "0.2.0", features = ["alloc"]}
